--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Project-4</title>
+        <!-- reset-css -->
         <link rel="stylesheet" href="./css/styles/reset.css" />
+        <!-- styles -->
+         <link rel="stylesheet" href="./assets/css/styles.css">
     </head>
     <body>
         <p>
