--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Project-4</title>
+        <!-- embed font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Sora:wght@316&display=swap"
+            rel="stylesheet"
+        />
         <!-- reset-css -->
         <link rel="stylesheet" href="./css/styles/reset.css" />
         <!-- styles -->
-         <link rel="stylesheet" href="./assets/css/styles.css">
+        <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
         <p>
