--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             rel="stylesheet"
         />
         <!-- reset-css -->
-        <link rel="stylesheet" href="./css/styles/reset.css" />
+        <link rel="stylesheet" href="./assets/css/styles.css" />
         <!-- styles -->
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
